Bug 1202001 - Log errors emitted during service worker lifecycle events to the Web Console; r=bkelly